<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/about_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about_settings"/>
    <item
        android:id="@+id/reverse_settings"
        android:icon="@drawable/ic_menu_reverse"
        android:orderInCategory="110"
        android:showAsAction="ifRoom"
        android:title="@string/reverseDirection"/>
    <item
        android:id="@+id/locate_settings"
        android:icon="@drawable/ic_menu_locate"
        android:orderInCategory="120"
        android:showAsAction="ifRoom"
        android:title="@string/locate"/>
    <item android:id="@+id/search_settings" android:title='@string/searchRoutes' android:orderInCategory="130" android:showAsAction="always"></item>
    <item android:id="@+id/update_token_settings" android:showAsAction="never" android:orderInCategory="101" android:title="@string/updateToken"></item>

</menu>